worked on framework to build particles

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Particle-Sim-V2</title>
+    <!-- inject:css -->
+    <!-- endinject -->
 </head>
+
 <body>
-
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-
-
+    <!-- inject:js -->
+    <!-- endinject -->
 </body>
 </html>
