Cleaned the repo up.

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Particle-Sim-V2</title>
-    <!-- inject:css -->
-    <!-- endinject -->
+	<link rel="stylesheet" href="./styles/main.scss">
 </head>
 
 <body>
-    <!-- inject:js -->
-    <!-- endinject -->
+	<script src="./scripts/main.js"></script>
 </body>
 </html>
