--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
-	<script src="./scripts/main.js"></script>
+	<div id="main"></div>
+	<script src="./main.jsx"></script>
 </body>
 </html>
