Initial typescript refactor

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Particle-Sim-V2</title>
-	<link rel="stylesheet" href="./styles/main.scss">
-</head>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Particle-Sim-V2</title>
+		<link rel="stylesheet" href="./styles/main.scss" />
+	</head>
 
-<body>
-	<div id="main"></div>
-	<script src="./main.jsx"></script>
-</body>
+	<body>
+		<div id="main"></div>
+		<script src="./main.tsx"></script>
+	</body>
 </html>
